Fix the post's image overlapping the navTabs component

--- a/components/navTabs/navtabs.module.css
+++ b/components/navTabs/navtabs.module.css
@@ -4,6 +4,7 @@
 
 .tabs {
   top: 68px;
+  z-index: 1;
   display: flex;
   padding: 15px 0;
   align-items: center;
